--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.1.5",
     "axios": "^1.2.3",
     "react": "^18.2.0",
