--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "antd": "^5.1.5",
     "axios": "^1.2.3",
     "react": "^18.2.0",
